; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/mca/extr_mca-device.c_mca_device_transform_ioport.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/mca/extr_mca-device.c_mca_device_transform_ioport.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mca_device = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.mca_bus = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 (%struct.mca_device*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mca_device_transform_ioport(%struct.mca_device* %0, i32 %1) #0 {
  %3 = alloca %struct.mca_device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.mca_bus*, align 8
  store %struct.mca_device* %0, %struct.mca_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.mca_device*, %struct.mca_device** %3, align 8
  %7 = getelementptr inbounds %struct.mca_device, %struct.mca_device* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.mca_bus* @to_mca_bus(i32 %9)
  store %struct.mca_bus* %10, %struct.mca_bus** %5, align 8
  %11 = load %struct.mca_bus*, %struct.mca_bus** %5, align 8
  %12 = getelementptr inbounds %struct.mca_bus, %struct.mca_bus* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32 (%struct.mca_device*, i32)*, i32 (%struct.mca_device*, i32)** %13, align 8
  %15 = load %struct.mca_device*, %struct.mca_device** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32 %14(%struct.mca_device* %15, i32 %16)
  ret i32 %17
}

declare dso_local %struct.mca_bus* @to_mca_bus(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
